만들어둔 라이브러리 탑재, 로그인 기능 추가

--- a/NemoKachi/NemoKachi.csproj
+++ b/NemoKachi/NemoKachi.csproj
@@ -116,10 +116,21 @@
     <Compile Include="Common\LayoutAwarePage.cs" />
     <Compile Include="Common\RichTextColumns.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
+    <Compile Include="FirstRunPage.xaml.cs">
+      <DependentUpon>FirstRunPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TwitterWrapper\Interfaces.cs" />
+    <Compile Include="LoginVisualizer.xaml.cs">
+      <DependentUpon>LoginVisualizer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwitterWrapper\TwitterClient.cs" />
+    <Compile Include="TwitterWrapper\TwitterClient_Queries.cs" />
+    <Compile Include="TwitterWrapper\TwitterClient_Stream.cs" />
+    <Compile Include="TwitterWrapper\TwitterDatas\TwitterDatas.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -133,6 +144,14 @@
     <Content Include="Assets\SplashScreen.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Common\ReadMe.txt" />
+    <Page Include="FirstRunPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="LoginVisualizer.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
