await 가능한 로그인 메소드 적용, 로그인 프로그레스 메시지에 스트링리소스 사용하도록 함

--- a/NemoKachi/NemoKachi.csproj
+++ b/NemoKachi/NemoKachi.csproj
@@ -137,6 +137,7 @@
       <SubType>Designer</SubType>
     </AppxManifest>
     <None Include="NemoKachi_TemporaryKey.pfx" />
+    <PRIResource Include="String\en-US\Resources.resw" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Logo.png" />
