--- a/NemoKachi/NemoKachi.csproj
+++ b/NemoKachi/NemoKachi.csproj
@@ -119,6 +119,9 @@
     <Compile Include="FirstRunPage.xaml.cs">
       <DependentUpon>FirstRunPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="TweetInput.xaml.cs">
+      <DependentUpon>TweetInput.xaml</DependentUpon>
+    </Compile>
     <Compile Include="TwitterWrapper\Interfaces.cs" />
     <Compile Include="LoginVisualizer.xaml.cs">
       <DependentUpon>LoginVisualizer.xaml</DependentUpon>
@@ -145,6 +148,10 @@
     <Content Include="Assets\SplashScreen.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Common\ReadMe.txt" />
+    <Page Include="TweetInput.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="FirstRunPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
