데이터 구조 변경 - 계정 정보는 AccountToken에 저장되고 TwitterClient 클래스는 말 그대로 트위터 클라이언트 하나의 선언이 될 수 있도록 바꿈. 메소드에서는 새로 AccountToken의 정보를 받아 사용

--- a/NemoKachi/NemoKachi.csproj
+++ b/NemoKachi/NemoKachi.csproj
@@ -131,6 +131,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TwitterWrapper\TwitterClient.cs" />
+    <Compile Include="TwitterWrapper\TwitterClient_Login.cs" />
     <Compile Include="TwitterWrapper\TwitterClient_Queries.cs" />
     <Compile Include="TwitterWrapper\TwitterClient_Stream.cs" />
     <Compile Include="TwitterWrapper\TwitterDatas\TwitterDatas.cs" />
