개발자 입장에서 좀더 쓰기 쉽도록 라이브러리에서 받는 메소드가 '트위터 서버가 받는 패러미터 이름'을 똑같이 지니는 클래스를 받도록 일부 수정. 리턴값도 그냥 스트링을 내보내지 않고 파싱해서 내보내도록 일부 수정. OAuth 메소드에서 각 패러미터 클래스들을 직접 받을 수 있도록 임플리싯 컨버팅 적용, ITimelineData 인터페이스를 통해 타임라인 정보를 쉽게 저장할 수 있도록 구조 수정

--- a/NemoKachi/NemoKachi.csproj
+++ b/NemoKachi/NemoKachi.csproj
@@ -107,6 +107,7 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountTokenCollection.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
