--- a/NemoKachi/NemoKachi.csproj
+++ b/NemoKachi/NemoKachi.csproj
@@ -112,7 +112,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="TweetHouse.cs" />
+    <Compile Include="TweetStorage.cs" />
     <Compile Include="Common\BindableBase.cs" />
     <Compile Include="Common\BooleanNegationConverter.cs" />
     <Compile Include="Common\BooleanToVisibilityConverter.cs" />
