트위터 카드 지원 추가, 간단한 HTML 파서 내장

--- a/NemoKachi/NemoKachi.csproj
+++ b/NemoKachi/NemoKachi.csproj
@@ -137,6 +137,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwitterWrapper\TwitterCards.cs" />
     <Compile Include="TwitterWrapper\TwitterClient.cs" />
     <Compile Include="TwitterWrapper\TwitterClient_Login.cs" />
     <Compile Include="TwitterWrapper\TwitterClient_Queries.cs" />
